// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 35.2,
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 22.4,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
  />
</View>
`;

exports[`<Switch> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 35.2,
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    activeTrackColor="green"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 22.4,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={true}
  />
</View>
`;

exports[`<Switch> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 35.2,
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 22.4,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
    visible={true}
  />
</View>
`;

exports[`<Switch> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 35.2,
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 22.4,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
  />
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#191919",
          "fontFamily": undefined,
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 11.2,
        },
        Object {
          "color": undefined,
        },
        Object {
          "color": "#191919",
          "fontWeight": "700",
          "marginBottom": 0,
          "marginLeft": 4,
        },
      ]
    }
  >
    Hello world
  </Text>
</View>
`;

exports[`<Switch> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 35.2,
        "marginBottom": undefined,
      },
      Object {
        "backgroundColor": "orange",
      },
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 22.4,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
  />
</View>
`;
